--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ pytest-flake8 = "*"
 flake8-quotes = "*"
 flake8-commas = "*"
 flake8-isort = "*"
+sanic-testing = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.9"
